--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 0x04-loops_conditions_and_parsing/holbertonschool
 0x05-processes_and_signals/100-process_and_pid_file
+0x06-regular_expressions/text_messages.log
