--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 0x05-processes_and_signals/100-process_and_pid_file
 0x06-regular_expressions/text_messages.log
 0x0A-configuration_management/killmenow
+0x0B-ssh/holberton
+0x0B-ssh/holberton.pub
